# AI-Newsletter-Automation

./: .dockerignore  .env.example  .gitignore  DEMO.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/agents/: aggregator_agent.py  base_agent.py  company_news_agent.py  deduplication_agent.py  funding_agent.py  global_news_agent.py  html_formatter_agent.py  model_release_agent.py  newsletter_generator_agent.py  opensource_agent.py  policy_agent.py  ranking_agent.py  research_agent.py  talent_agent.py
app/api/: dependencies.py  routes.py
app/config/: logging_config.py  settings.py  sources.py
app/graph/: nodes.py  workflow.py
app/models/: __init__.py  api_models.py  article.py  newsletter.py  state.py
app/services/: arxiv_service.py  funding_provider.py  github_service.py  history_service.py  http_client.py  (+7 more)
docs/: 01_Project_Overview.md  02_System_Architecture.md  03_AI_Pipeline.md  04_Tech_Stack.md  05_Agent_Responsibilities.md  06_API_Documentation.md  07_Deployment_Guide.md  08_User_Guide.md  09_Demo_Guide.md  10_Future_Roadmap.md  API.md  ARCHITECTURE.md  DEPLOYMENT.md  ENVIRONMENT_VARIABLES.md  FOLDER_STRUCTURE.md  POWER_AUTOMATE.md  ROADMAP.md  TROUBLESHOOTING.md
frontend/: .env.example  .gitignore  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
power-automate/: README.md  definition.json
scripts/: generate_newsletter_cli.py
tests/: conftest.py
(+88 files in other folders)
